--- a/QLPhongMachTuWPF/View/AddAppointment.xaml
+++ b/QLPhongMachTuWPF/View/AddAppointment.xaml
@@ -122,7 +122,7 @@ Grid.Column="1" Panel.ZIndex="1"
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 150 0 0">
                     <!--Date of birth-->
-                    <ComboBox Text="{Binding Ngay}" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Ngay}" x:Name="cmbDay" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                                ItemsSource="{Binding Days}"
                               SelectedItem="{Binding SelectedDay}"
                                FontSize="16"/>
@@ -130,14 +130,14 @@ Grid.Column="1" Panel.ZIndex="1"
                     <ComboBox Text="{Binding Thang}"
                                ItemsSource="{Binding Months}"
             SelectedItem="{Binding SelectedMonth}"
-                              x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbMonth" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
                     <ComboBox Text="{Binding Nam}" 
                                ItemsSource="{Binding Years}"
 SelectedItem="{Binding SelectedYear}"
-                              x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbYear" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
 
@@ -159,7 +159,7 @@ SelectedItem="{Binding SelectedYear}"
                     <ComboBox Text="{Binding NgayKham}"
                                ItemsSource="{Binding DaysApp}"
 SelectedItem="{Binding SelectedDayApp}"
-                              x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbDayapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
                                FontSize="16"/>
 
@@ -167,14 +167,14 @@ SelectedItem="{Binding SelectedDayApp}"
                               
                                ItemsSource="{Binding MonthsApp}"
 SelectedItem="{Binding SelectedMonthApp}"
-                              x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbMonthapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
                     <ComboBox Text="{Binding NamKham}"
                                ItemsSource="{Binding YearsApp}"
                                 SelectedItem="{Binding SelectedYearApp}"
-                              x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbYearapp" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
@@ -187,8 +187,9 @@ SelectedItem="{Binding SelectedMonthApp}"
 
                 </StackPanel>
                 <TextBlock Text="Status" Margin="390 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Staff's Name" Margin="80 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 350 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 350 0 0">
                     <!--Day appointment-->
                     <ComboBox Text="{Binding TenNV, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                               ItemsSource="{Binding ListStaff}" DisplayMemberPath="TenNV" VerticalAlignment="Center"  x:Name="cmbStaff" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
