--- a/QLPhongMachTuWPF/View/AddMedicineList.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineList.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
         DataContext="{StaticResource AddMedicineVM}"
-        Title="AddMedicineList" Height="600" Width="800"
+        Title="AddMedicineList" Height="500" Width="800"
                         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:AddMedicineVM}"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
 
@@ -71,15 +71,15 @@
             <!--Chu-->
             <Grid Grid.Row="0" MouseDown="Border_MouseDown">
                 <Button x:Name="btnClose"
- BorderBrush="#3693ff"
-Grid.Column="1" Panel.ZIndex="1"
-   Width="30"
-   Height="30"
-   VerticalAlignment="Top"
-   HorizontalAlignment="Right"
-   Margin="0 13 13 0"
-   Click="btnClose_Click"
-    BorderThickness="0">
+                 BorderBrush="#3693ff"
+                Grid.Column="1" Panel.ZIndex="1"
+                   Width="30"
+                   Height="30"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Right"
+                   Margin="0 13 13 0"
+                   Click="btnClose_Click"
+                    BorderThickness="0">
                     <Button.Background >
                         <ImageBrush ImageSource="/Images/image.png"
                 Stretch="Fill"
@@ -94,13 +94,9 @@ Grid.Column="1" Panel.ZIndex="1"
 
             <Grid Grid.Row="1">
                 <Border CornerRadius="0 0 10 0" Background="White">
-                    <TextBox
-                        Text="{Binding Price}"
-                        materialDesign:HintAssist.Hint="Price"
-                        Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                        FontSize="16" Margin="382,50,88,415"/>
+                   
                 </Border>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 50 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 80 0 0">
                     <!--name-->
                     <TextBox
                         Text="{Binding Name}"
@@ -108,42 +104,39 @@ Grid.Column="1" Panel.ZIndex="1"
                          materialDesign:HintAssist.Hint="Name"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}"
                          Width="250" FontSize="16"/>
-
+                    <TextBox
+                     Text="{Binding Price}"
+                     materialDesign:HintAssist.Hint="Price"
+                     Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                     FontSize="16" Width="250" Margin="50 0 0 0"/>    
 
                 </StackPanel>
 
 
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 150 0 0">
-                    <StackPanel
- >
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80,190,0,0">
                         <TextBox
-                            Text="{Binding Unit}"
-    Height="73"
-                            Width="249"
-    materialDesign:HintAssist.Hint="Unit"
-    AcceptsReturn="True"
-    
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
+                        Text="{Binding Unit}"
+                        Width="250"
+                        materialDesign:HintAssist.Hint="Unit"
+                        AcceptsReturn="True"
+                        Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                        TextWrapping="Wrap"
+                        VerticalScrollBarVisibility="Auto"
+                        FontSize="16" TextChanged="TextBox_TextChanged_1" />
+
+                            <ComboBox
+                            Text="{Binding Status}"
+                            x:Name="cmbStatus"
+                            Width="250"
+                            Style="{StaticResource MaterialDesignOutlinedComboBox}"
                             FontSize="16"
-                            
-    />
-                    </StackPanel>
+                            Margin="50,0,0,0" />    
+       
                 </StackPanel>
 
-                <TextBlock Text="Status" Margin="80 50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
 
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 300 0 0">
-
-                    <!--Status-->
-                    <ComboBox Text="{Binding Status}" x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
-         
-           FontSize="16" Margin="0 0 0 0"/>
-
-                </StackPanel>
+                <TextBlock Text="Status" Margin="380 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
 
 
 
