--- a/QLPhongMachTuWPF/View/ModifyAppointment.xaml
+++ b/QLPhongMachTuWPF/View/ModifyAppointment.xaml
@@ -126,7 +126,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding Days}"
                         SelectedItem="{Binding SelectedDay}"
                         Text="{Binding Ngay}"
-                        x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbDay" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
                                FontSize="16"/>
 
@@ -134,7 +134,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding Months}"
                         SelectedItem="{Binding SelectedMonth}"
                         Text="{Binding Thang}"
-                        x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbMonth" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
@@ -142,7 +142,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding Years}"
                         SelectedItem="{Binding SelectedYear}"
                         Text="{Binding Nam}"
-                        x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbYear" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
 
@@ -164,7 +164,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding DaysApp}"
                         SelectedItem="{Binding SelectedDayApp}"
                         Text="{Binding NgayApp}"
-                        x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbDayapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                              
                                FontSize="16"/>
 
@@ -172,7 +172,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding MonthsApp}"
                         SelectedItem="{Binding SelectedMonthApp}"
                         Text="{Binding ThangApp}"
-                        x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbMonthapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
@@ -180,7 +180,7 @@ Grid.Column="1" Panel.ZIndex="1"
                         ItemsSource="{Binding YearsApp}"
                         SelectedItem="{Binding SelectedYearApp}"
                         Text="{Binding NamApp}"
-                        x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        x:Name="cmbYearapp" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
@@ -195,8 +195,8 @@ FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
                 <TextBlock Text="Status" Margin="390 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 350 0 0">
+                <TextBlock Text="Staff's Name" Margin="80 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 350 0 0">
                     <ComboBox 
                         ItemsSource="{Binding ListStaff}"
                         DisplayMemberPath="TenNV"
