--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -127,14 +127,14 @@ Grid.Column="1" Panel.ZIndex="1"
                               ItemsSource="{Binding Days}"
                               SelectedItem="{Binding SelectedDay}"
                           
-                             x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                             x:Name="cmbDay" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                             
                               FontSize="16"/>
 
                     <ComboBox Text="{Binding Thang, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               ItemsSource="{Binding Months}"
                               SelectedItem="{Binding SelectedMonth}"
-                             x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                             x:Name="cmbMonth" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
         
          FontSize="16" Margin="10 0 0 0"/>
 
@@ -142,7 +142,7 @@ Grid.Column="1" Panel.ZIndex="1"
                               ItemsSource="{Binding Years}"
                               SelectedItem="{Binding SelectedYear}" 
                              
-                             x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                             x:Name="cmbYear" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
 FontSize="16" Margin="10 0 0 0"/>
 
@@ -165,7 +165,7 @@ FontSize="16" Margin="10 0 0 0"/>
                               ItemsSource="{Binding DaysApp}"
                               SelectedItem="{Binding SelectedDayApp}"
                               Text="{Binding NgayKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                              x:Name="cmbDayapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              x:Name="cmbDayapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                                 
                                FontSize="16"/>
 
@@ -173,13 +173,13 @@ FontSize="16" Margin="10 0 0 0"/>
                         
                         ItemsSource="{Binding MonthsApp}"
                         SelectedItem="{Binding SelectedMonthApp}"
-                        IsEditable="True" Text="{Binding ThangKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbMonthapp" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        IsEditable="True" Text="{Binding ThangKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbMonthapp" Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
           FontSize="16" Margin="10 0 0 0"/>
 
                     <ComboBox ItemsSource="{Binding YearsApp}"
                               SelectedItem="{Binding SelectedYearApp}"
-                              IsEditable="True" Text="{Binding NamKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbYearapp" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                              IsEditable="True" Text="{Binding NamKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbYearapp" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
@@ -191,8 +191,8 @@ FontSize="16" Margin="10 0 0 0"/>
 
                 </StackPanel>
                 <TextBlock Text="Status" Margin="390 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 290 0 0">
+                <TextBlock Text="Staff's Name" Margin="80 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 290 0 0">
                     <!--Day appointment-->
                     <ComboBox 
                         ItemsSource="{Binding ListStaff}"
