--- a/QLPhongMachTuWPF/View/AddMedicineList.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineList.xaml
@@ -93,10 +93,14 @@
             <!--Input-->
 
             <Grid Grid.Row="1">
-                <Border CornerRadius="0 0 10 0" Background="White">
-                   
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="619*"/>
+                    <ColumnDefinition Width="101*"/>
+                </Grid.ColumnDefinitions>
+                <Border CornerRadius="0 0 10 0" Background="White" Grid.ColumnSpan="2">
+
                 </Border>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 80 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 80 0 0" Grid.ColumnSpan="2">
                     <!--name-->
                     <TextBox
                         Text="{Binding Name}"
@@ -108,14 +112,14 @@
                      Text="{Binding Price}"
                      materialDesign:HintAssist.Hint="Price"
                      Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                     FontSize="16" Width="250" Margin="50 0 0 0"/>    
+                     FontSize="16" Width="250" Margin="50 0 0 0"/>
 
                 </StackPanel>
 
 
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80,190,0,0">
-                        <TextBox
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80,190,0,0" Grid.ColumnSpan="2">
+                    <TextBox
                         Text="{Binding Unit}"
                         Width="250"
                         materialDesign:HintAssist.Hint="Unit"
@@ -123,26 +127,26 @@
                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
                         TextWrapping="Wrap"
                         VerticalScrollBarVisibility="Auto"
-                        FontSize="16" TextChanged="TextBox_TextChanged_1" />
+                        FontSize="16" />
 
-                            <ComboBox
+                    <ComboBox
                             Text="{Binding Status}"
                             x:Name="cmbStatus"
                             Width="250"
                             Style="{StaticResource MaterialDesignOutlinedComboBox}"
                             FontSize="16"
-                            Margin="50,0,0,0" />    
-       
+                            Margin="50,0,0,0" />
+
                 </StackPanel>
 
 
-                <TextBlock Text="Status" Margin="380 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Status" Margin="380,169,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" FontSize="16" Foreground="Gray"/>
 
 
 
                 <Button
                     Command="{Binding AddMedicineCommand}"
-                    Content="Add medicine"  Style="{StaticResource btnAdd}">
+                    Content="Add medicine"  Style="{StaticResource btnAdd}" Margin="80,0,0,80">
 
                 </Button>
 
