--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -99,7 +99,7 @@ Grid.Column="1" Panel.ZIndex="1"
             <Grid Grid.Row="1" >
                 <Border CornerRadius="0 0 10 0" Background="White">
                     <Button Command="{Binding ModifyDiagnosisCommand}" 
-                        Content="Create invoice"  Margin="360,0,0,50" Style="{StaticResource btnAdd}"/>
+                        Content="Create invoice"  Margin="390,0,0,50" Style="{StaticResource btnAdd}"/>
                 </Border>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 50 0 0">
                     <!--name-->
@@ -220,16 +220,17 @@ FontSize="16" Margin="60 0 0 0"/>
                         VerticalAlignment="Center"
             materialDesign:HintAssist.Hint="Symptom"
             Style="{StaticResource MaterialDesignOutlinedTextBox}"
-            Width="560" FontSize="16"/>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 450 0 0">
+            Width="250" Height="150" FontSize="16"/>
                     <TextBox
                     Text="{Binding Result}"
             VerticalAlignment="Center"
 materialDesign:HintAssist.Hint="Result"
 Style="{StaticResource MaterialDesignOutlinedTextBox}"
-Width="560" FontSize="16"/>
+Width="250" Height="150" FontSize="16" Margin="60 0 0 0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 450 0 0">
+                   
                 </StackPanel>
 
 
