--- a/QLPhongMachTuWPF/View/AddStaff.xaml
+++ b/QLPhongMachTuWPF/View/AddStaff.xaml
@@ -121,21 +121,25 @@
                     <!--Date of birth-->
                     <ComboBox x:Name="cmbDay" Width="70" 
                               Text ="{Binding Ngay}"
-                              IsReadOnly="False"
-                              IsEditable="True"
+                              ItemsSource="{Binding Days}"
+                              SelectedItem="{Binding SelectedDay}"
                               Style="{StaticResource MaterialDesignOutlinedComboBox}"
                                FontSize="16"/>
 
                     <ComboBox x:Name="cmbMonth"
                               Text="{Binding Thang}"
-                              IsEditable="True"
+                              
+                             ItemsSource="{Binding Years}"
+                              SelectedItem="{Binding SelectedMonth}"
                               Width="70" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           FontSize="16" Margin="10 0 0 0"/>
 
                     <ComboBox x:Name="cmbYear" 
                               Text="{Binding Nam}"
+                              ItemsSource="{Binding Years}"
+                              SelectedItem="{Binding SelectedYear}"
                               Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
- FontSize="16" Margin="10 0 0 0" IsEditable="True"/>
+ FontSize="16" Margin="10 0 0 0"/>
 
                     <!--Address-->
                     <TextBox VerticalAlignment="Center"
@@ -150,15 +154,18 @@
 
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 240 0 0">
-                    <ComboBox Text="{Binding Gender}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Gender}" 
+                              ItemsSource="{Binding GenderSource}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                      FontSize="16"/>
-                    <ComboBox Text="{Binding Type}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Type}" 
+                              ItemsSource="{Binding TypeSource}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                     FontSize="16" Margin="60 0 0 0"/>
 
                 </StackPanel >
                 <TextBlock Text="Status" Margin="80 100 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 323 0 0">
-                    <ComboBox Text="{Binding Status}" x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox Text="{Binding Status}"  
+                              ItemsSource="{Binding StatusSource}" x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
