--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        Title="ModifyDiagnosis" Height="700" Width="800" 
+        Title="ModifyDiagnosis" Height="880" Width="800" 
         DataContext="{StaticResource ModifyDiagnosisVM}"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ModifyDiagnosisVM}"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
@@ -101,7 +101,10 @@ Grid.Column="1" Panel.ZIndex="1"
                     <Button Command="{Binding ModifyDiagnosisCommand}" 
                         Content="Create invoice"  Margin="390,0,0,50" Style="{StaticResource btnAdd}"/>
                 </Border>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 50 0 0">
+                <StackPanel Margin="0 10 0 0" Orientation="Vertical">
+                    
+                
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 10 0 0">
                     <!--name-->
                     <TextBox
                          Text="{Binding TenBN, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -119,9 +122,9 @@ Grid.Column="1" Panel.ZIndex="1"
                     Width="250" Margin="60 0 0 0" FontSize="16"/>
                 </StackPanel>
 
-                <TextBlock Text="Date of birth" Margin="80 -380 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Date of birth" Margin="80 20 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 130 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 0 0 0">
                     <!--Date of birth-->
                     <ComboBox Text="{Binding Ngay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               ItemsSource="{Binding Days}"
@@ -154,14 +157,14 @@ FontSize="16" Margin="10 0 0 0"/>
                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                 Width="250" Margin="60 0 0 0" FontSize="16"/>
                 </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Appointment day" Margin="80 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Gender" Margin="110 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                    </StackPanel>
 
-                <TextBlock Text="Appointment day" Margin="80 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Gender" Margin="390 -220 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-
-
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 210 0 0">
-                    <!--Day appointment-->
-                    <ComboBox IsEditable="True" 
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 0 0 0">
+                        <!--Day appointment-->
+                        <ComboBox IsEditable="True" 
                               ItemsSource="{Binding DaysApp}"
                               SelectedItem="{Binding SelectedDayApp}"
                               Text="{Binding NgayKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -169,7 +172,7 @@ FontSize="16" Margin="10 0 0 0"/>
                                 
                                FontSize="16"/>
 
-                    <ComboBox
+                        <ComboBox
                         
                         ItemsSource="{Binding MonthsApp}"
                         SelectedItem="{Binding SelectedMonthApp}"
@@ -177,22 +180,24 @@ FontSize="16" Margin="10 0 0 0"/>
          
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox ItemsSource="{Binding YearsApp}"
+                        <ComboBox ItemsSource="{Binding YearsApp}"
                               SelectedItem="{Binding SelectedYearApp}"
                               IsEditable="True" Text="{Binding NamKham, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbYearapp" Width="90" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="10 0 0 0"/>
-                    <!--Gender-->
-                    <ComboBox
+                        <!--Gender-->
+                        <ComboBox
                         ItemsSource="{Binding GenderSource}"
                         Text="{Binding Gender, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
            FontSize="16" Margin="60 0 0 0"/>
 
-                </StackPanel>
-                <TextBlock Text="Status" Margin="390 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Staff's Name" Margin="80 -60 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 290 0 0">
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Status" Margin="80 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Staff's Name" Margin="110 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 0 0 0">
                     <!--Day appointment-->
                     <ComboBox 
                         ItemsSource="{Binding ListStaff}"
@@ -213,24 +218,61 @@ FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 370 0 0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 30 0 0">
 
                     <TextBox
                         Text="{Binding Symtoms}"
                         VerticalAlignment="Center"
             materialDesign:HintAssist.Hint="Symptom"
             Style="{StaticResource MaterialDesignOutlinedTextBox}"
-            Width="250" Height="150" FontSize="16"/>
+            Width="250" Height="100" FontSize="16"/>
                     <TextBox
                     Text="{Binding Result}"
             VerticalAlignment="Center"
 materialDesign:HintAssist.Hint="Result"
 Style="{StaticResource MaterialDesignOutlinedTextBox}"
-Width="250" Height="150" FontSize="16" Margin="60 0 0 0"/>
+Width="250" Height="100" FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 450 0 0">
-                   
+                    <StackPanel Orientation="Horizontal" Margin="80 30 0 0">
+                        
+                        <ComboBox Width="171" Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
+
+                        <Button Content="Add"  Margin="10" Foreground="White" />
+                        <Border Margin="60 0 0 0" BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
+                        <ListBox
+
+    materialDesign:ListBoxItemAssist.ShowSelection="False"
+                            VerticalAlignment="Center"
+                            Width="250" Height="150"
+                           >
+
+                            <ListBox.ItemContainerStyle>
+                                <Style TargetType="ListBoxItem">
+                                    <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="ListBoxItem">
+                                                <TextBlock Text="{Binding Text}" Margin="5,2" />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListBox.ItemContainerStyle>
+
+                            <TextBlock
+      Text="Listbox" />
+                            <TextBlock
+      Text="Without" />
+                            <TextBlock
+      Text="Selection" />
+                            <TextBlock
+      Text="Highlights" />
+                            
+                        </ListBox>
+                        </Border>
+                    </StackPanel>
+                    
                 </StackPanel>
 
 
