--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -97,7 +97,7 @@ Grid.Column="1" Panel.ZIndex="1"
             <!--Input-->
 
             <Grid Grid.Row="1" >
-                <Border CornerRadius="0 0 10 0" Background="White">
+                <Border CornerRadius="0 0 10 0" Background="White" Margin="0,0,10,0">
                     <Button Command="{Binding ModifyDiagnosisCommand}" 
                         Content="Create invoice"  Margin="390,0,0,50" Style="{StaticResource btnAdd}"/>
                 </Border>
@@ -194,8 +194,8 @@ FontSize="16" Margin="10 0 0 0"/>
 
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Status" Margin="80 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Staff's Name" Margin="110 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                        <TextBlock Text="Staff's Name" Margin="80 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+                        <TextBlock Text="Status" Margin="110 30 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 0 0 0">
                     <!--Day appointment-->
@@ -236,40 +236,22 @@ Width="250" Height="100" FontSize="16" Margin="60 0 0 0"/>
 
                     <StackPanel Orientation="Horizontal" Margin="80 30 0 0">
                         
-                        <ComboBox Width="171" Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
+                        <ComboBox Width="171"
+                                  Text="{Binding MedicineChoice}"
+                                  ItemsSource="{Binding ListMedicine}"
+                                  DisplayMemberPath="TenThuoc"
+                                  Style="{StaticResource MaterialDesignOutlinedComboBox}"  FontSize="16"/>
 
-                        <Button Content="Add"  Margin="10" Foreground="White" />
+                        <Button Content="Add" Command="{Binding AddMedicineTolist}"  Margin="10" Foreground="White" />
                         <Border Margin="60 0 0 0" BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
-                        <ListBox
+                            <ListBox
 
-    materialDesign:ListBoxItemAssist.ShowSelection="False"
+                            ItemsSource="{Binding ListChoice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             VerticalAlignment="Center"
                             Width="250" Height="150"
-                           >
-
-                            <ListBox.ItemContainerStyle>
-                                <Style TargetType="ListBoxItem">
-                                    <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="ListBoxItem">
-                                                <TextBlock Text="{Binding Text}" Margin="5,2" />
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </ListBox.ItemContainerStyle>
-
-                            <TextBlock
-      Text="Listbox" />
-                            <TextBlock
-      Text="Without" />
-                            <TextBlock
-      Text="Selection" />
-                            <TextBlock
-      Text="Highlights" />
-                            
-                        </ListBox>
+                            > 
+                               
+                            </ListBox>
                         </Border>
                     </StackPanel>
                     
